# td-client-python

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  codeql.yml  python-publish.yml  pythontest.yml  sanity-test.yml
.github/workflows/scripts/: workflow-sanity-test.sh
docs/: conf.py  file_import_parameters.rst  gettingstarted.rst  index.rst  reference.rst
docs/api/: api.rst  client.rst  dbapi.rst  index.rst  misc.rst  model.rst
src/tdclient/: access_control_model.py  account_model.py  api.py  bulk_import_model.py  connector_api.py  database_api.py  database_model.py  errors.py  export_api.py  import_api.py  job_api.py  model.py  result_api.py  schedule_model.py  server_status_api.py  table_api.py  table_model.py
tdclient/: __init__.py  access_control_api.py  access_control_model.py  account_api.py  account_model.py  api.py  bulk_import_api.py  bulk_import_model.py  bulk_load_api.py  client.py  connection.py  connector_api.py  cursor.py  database_api.py  database_model.py  errors.py  export_api.py  import_api.py  job_api.py  job_model.py  model.py  models.py  partial_delete_api.py  pep249.py  pseudo_certifi.py  result_api.py  result_model.py  schedule_api.py  schedule_model.py  server_status_api.py  table_api.py  table_model.py  types.py  user_api.py  user_model.py  util.py  utils.py  version.py
tdclient/test/: access_control_api_test.py  access_control_model_test.py  account_api_test.py  account_model_test.py  api_test.py  bulk_import_api_test.py  bulk_import_model_test.py  bulk_import_test.py  bulk_load_api_test.py  certifi_test.py  client_test.py  conftest.py  connection_test.py  connector_api_test.py  cursor_test.py  database_api_test.py  database_model_test.py  db_api_test.py  dtypes_and_converters_test.py  export_api_test.py  import_api_test.py  job_api_test.py  job_model_test.py  model_test.py  partial_delete_api_test.py  pseudo_certifi_test.py  result_api_test.py  result_model_test.py  schedule_api_test.py  schedule_model_test.py  server_status_api_test.py  table_api_test.py  table_model_test.py  test_helper.py  user_api_test.py  user_model_test.py  util_test.py
test/: access_control_api_test.py  access_control_model_test.py  account_api_test.py  account_model_test.py  api_test.py  bulk_import_api_test.py  bulk_import_model_test.py  client_test.py  connection_test.py  connector_api_test.py  cursor_test.py  database_api_test.py  database_model_test.py  export_api_test.py  import_api_test.py  job_api_test.py  job_model_test.py  partial_delete_api_test.py  result_api_test.py  result_model_test.py  schedule_api_test.py  schedule_model_test.py  server_status_api_test.py  table_api_test.py  table_model_test.py  user_api_test.py  user_model_test.py
