[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "td-client"
version = "1.5.0"
description = "Treasure Data API library for Python"
readme = {file = "README.rst", content-type = "text/x-rst; charset=UTF-8"}
requires-python = ">=3.8"
license = {text = "Apache Software License"}
authors = [{name = "Treasure Data, Inc.", email = "support@treasure-data.com"}]
urls = {homepage = "http://treasuredata.com/"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "python-dateutil",
  "msgpack>=0.6.2",
  "urllib3",
  "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pyright"]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.setuptools]
packages = ["tdclient"]

[tool.setuptools.package-data]
tdclient = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  # "B",
]
exclude = ["tdclient/test/*"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-third-party = ["dateutil","msgpack","pkg_resources","pytest","setuptools","urllib3"]

[tool.pyright]
include = ["tdclient"]
exclude = ["**/__pycache__", "tdclient/test", "docs"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingImports = "warning"

# Pre-commit venv configuration
venvPath = "."
venv = ".venv"
