[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "td-client"
version = "1.6.0"
description = "Treasure Data API library for Python"
readme = {file = "README.rst", content-type = "text/x-rst; charset=UTF-8"}
requires-python = ">=3.10"
license = {text = "Apache Software License"}
authors = [{name = "Treasure Data, Inc.", email = "support@treasure-data.com"}]
urls = {homepage = "http://treasuredata.com/"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "python-dateutil>=2.9.0.post0",  # 2.9.0 supports Python 3.12+
  "msgpack>=1.1.2",  # 1.1.2 supports Python 3.9+
  "urllib3>=2.0.0",  # To ensure type hinting not breaks
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
]
test = [
  "coverage[toml]",
  "pytest>=8.3",
  "coveralls>=1.1,<5.0",
  "pyyaml",
]

[tool.setuptools]
packages = ["tdclient"]

[tool.setuptools.package-data]
tdclient = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
]
exclude = ["tdclient/test/*"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-third-party = ["dateutil","msgpack","pkg_resources","pytest","setuptools","urllib3"]

[tool.pyright]
include = ["tdclient"]
exclude = ["**/__pycache__", "tdclient/test", "docs"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
pythonPlatform = "All"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportMissingImports = "error"

# Pre-commit venv configuration
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "tox>=4",
    "msgpack-types>=0.5.0",
    "types-certifi",
]
